--- a/baseballValue.Rmd
+++ b/baseballValue.Rmd
@@ -5,9 +5,36 @@ date: "2019-09-28"
 output: html_document
 ---
 
+#Introduction
+
 The goal of this project is to identify the attributes of the players with the most value and the least value,
 as well as predicting which players will have the most and least value in the future.
 
-The first step we'll take is identify which datasets we'll be working with. The Lahman Database has a lot of good information that we'll need, namely Player Value data, salary, and dates of birth. 
+#Getting started
+
+The first step we'll take is to identify which datasets we'll be working with. The Lahman Database has a lot of good information that we'll need, namely Player Value data, salary, and dates of birth. 
 
 We'll download that from <http://www.seanlahman.com/baseball-archive/statistics/>
+
+It's possible to download the database as a .CSV file, and you could technically do everything needed for this project without using SQL, but it's a good practice to get used to working with databases, especially since a lot of the datasets you'd see in the real world will be bigger than the one we're currently working with.
+
+Sean Lahman has posted the entire .sql file on his website, so importing it into MySQL is as simple as hitting 'Data Import' and loading that database into its own schema.
+
+Once the Lahman database is all settled in its own schema, we want to start to work with that data. It's definitely possible to run all your SQL commands inside the MySQL environment itself, but RStudio has packages available for installation that make it easy to work with your database right from R. This has a few advantages, most notably the fact that you don't have to keep hopping back and forth between programs.
+
+#Talking to our Database
+
+The first thing you'll do is make sure that the RMySQL package is installed. This is as simple as calling "install.packages("RMySQL")" once.
+
+Next we'll load up our RMySQL library and get to work.
+```{r}
+library(RMySQL)
+```
+
+```{r, include= FALSE}
+mydb = dbConnect(MySQL(), user='root', password='doorknob18pillow', dbname='Lahman2016', host='127.0.0.1')
+```
+
+```{r}
+dbListTables(mydb)
+```
